--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,14 +32,12 @@ dependencies:
     sdk: flutter
   google_maps_flutter: ^2.2.1
   flutter_dotenv: ^5.0.2
-
-  # The following adds the Cupertino Icons font to your application.
-  # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
   firebase_auth: ^5.3.3
   firebase_core: ^3.8.0
   firebase_storage: ^12.3.6
   cloud_firestore: ^5.5.0
+  provider: ^6.1.2
 
 dev_dependencies:
   flutter_test:
